--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://adarshpandey9910:AdarshDatabase@cluster0.1899f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_jwt_secret
+JWT_SECRET="assignmentsecret"
+FRONTEND_URL=http://localhost:5173
